EXTRA_DIST = \
direct/build.h \
df_andi/src/README \
df_andi/jni/Android.mk \
df_andi/jni/Application.mk \
df_andi/AndroidManifest.xml \
df_andi/prepare.sh \
df_andi/res/drawable/icon.png \
df_andi/res/values/strings.xml \
df_matrix/src/README \
df_matrix/jni/Android.mk \
df_matrix/jni/Application.mk \
df_matrix/AndroidManifest.xml \
df_matrix/prepare.sh \
df_matrix/res/drawable/icon.png \
df_matrix/res/values/strings.xml \
df_window/src/README \
df_window/jni/Android.mk \
df_window/jni/Application.mk \
df_window/AndroidManifest.xml \
df_window/prepare.sh \
df_window/res/drawable/icon.png \
df_window/res/values/strings.xml \
Android/cutils/native_handle.h \
Android/hardware/gralloc.h \
Android/hardware/fb.h \
Android/hardware/hardware.h \
Android/system/window.h \
Android/system/graphics.h \
Android/android_keycodes.h \
common_files/Application.mk \
common_files/prepare.sh \
common_files/icon.png \
fusion/build.h \
directfb-env.mk \
directfb_build.h \
config.h \
clanbomber2/src/README \
clanbomber2/jni/Android.mk \
clanbomber2/jni/Application.mk \
clanbomber2/AndroidManifest.xml \
clanbomber2/prepare.sh \
clanbomber2/res/drawable/icon.png \
clanbomber2/res/values/strings.xml \
prepare.sh \
README \
directfb.mk
